# os---hw2

./: CMakeLists.txt  a.out  gal.c  guy2.c  myshell.c  shell.c
other/: myshell22.c  natalie2 copy.c  shell123.c
shit/: a.out  myshellpr.c  output.txt  shellpr.c  test_combined_input.txt  test_input.txt  test_myshell.sh  test_output.txt  test_shell_harder.sh  tester.sh
מערכות ודייייייייי/: a.out  gal.c  gal2.c  galshell.c  roni.c
