cmake_minimum_required(VERSION 3.27)
project(__2 C)

set(CMAKE_C_STANDARD 11)

add_executable(__2
        other/dirve2.c
        other/guy2.c
        other/myshell22.c
        "other/natalie2 copy.c"
        other/natalie2.c
        other/shell123.c
        shit/myshellpr.c
        shit/shellpr.c
        guy2.c
        myshell.c
        shell.c)
